# robust-loss-playground

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  specification.md
docs/: design.md  formulas.md
examples/: mlp_regression_gpu.py  plot_influence_functions.py  plot_loss_curves.py  plot_weight_functions.py  toy_regression_outliers.py
src/robust_loss/: __init__.py  plotting.py  registry.py  types.py  utils.py
src/robust_loss/numpy/: __init__.py  base.py  cauchy.py  charbonnier.py  geman_mcclure.py  huber.py  l1.py  l2.py  tukey.py  welsch.py
src/robust_loss/torch/: __init__.py  base.py  cauchy.py  charbonnier.py  geman_mcclure.py  huber.py  l1.py  l2.py  tukey.py  welsch.py
tests/: test_device_dtype.py  test_influence_weight.py  test_numpy_value.py  test_reduction.py  test_torch_numpy_consistency.py  test_torch_value.py
